--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,12 +21,12 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Get the merge commit title
-      id: get_commit_title
+    - name: Read version from file
+      id: read_version
       run: |
-        COMMIT_TITLE=$(git log -1 --pretty=%B)
-        echo "Commit title: $COMMIT_TITLE"
-        echo ::set-output name=TITLE::"$COMMIT_TITLE"
+        VERSION=$(cat version.txt)
+        echo "Version from file: $VERSION"
+        echo ::set-output name=VERSION::$VERSION
 
     - name: Build and push Docker images
       uses: docker/build-push-action@v2
@@ -35,6 +35,6 @@ jobs:
         file: ./Dockerfile
         push: true
         tags: |
-          perforge/perforge-app:${{ steps.get_commit_title.outputs.TITLE }}
+          perforge/perforge-app:${{ steps.read_version.outputs.VERSION }}
           perforge/perforge-app:latest
         platforms: linux/amd64,linux/arm64
