--- a/app/backend/ai_support/prompts.yaml
+++ b/app/backend/ai_support/prompts.yaml
@@ -1,16 +1,39 @@
 prompts:
-- id: graph_of_a_single_test
-  name: Graph of a single test
+- id: response_time_single_test
+  name: Response time graph of a single test
   type: default
   place: graph
   prompt: |
-    Task: Analyze the graph
-    Instructions:
-      - Identify each line by its label and color.
-      - Assess the trends of each metric line.
-      - Minor fluctuations in metric are acceptable.
-      - Indicate whether the metric suggest a performance issue.
-      Constraints: Provide the most important observations as a bullet list without an opening statement or conclusion and without prefixed descriptions such as 'Observations'.
+    ###Task: follow the instructions below to ANALYZE the graph and PROVIDE observations corresponding to constraints
+    ###Instructions:
+    - Assess the trends of each response time line.
+    - Response times should remain stable. Minor fluctuations in response times are acceptable.
+    - Explicitly identify any spikes or significant deviations in each metric.
+    ###Constraints: 
+    - Provide one observation per metric as a bullet list, without an opening statement or conclusion, and refrain from using prefixed descriptors such as 'Observations.'"
+    - Your output should follow the following structure if there is no performance issue for a metric:
+      - The [metric] is consistently stable [with minimal fluctuations/without fluctuations].
+    - Your output should follow the following structure if there is performance issue for a metric:
+      - The [performance issue description], indicating performance issue.
+    ###Input: response time metric graph
+prompts:
+- id: throughput_single_test
+  name: Throughput graph of a single test
+  type: default
+  place: graph
+  prompt: |
+    ###Task: follow the instructions below to ANALYZE the graph and PROVIDE observations corresponding to constraints
+    ###Instructions:
+    - Assess the trends of each throughput line.
+    - Throughput should remain stable. Minor fluctuations in throughput are acceptable.
+    - Explicitly identify any performance issue in each metric.
+    ###Constraints: 
+    - Provide one observation per metric as a bullet list, without an opening statement or conclusion, and refrain from using prefixed descriptors such as 'Observations.'"
+    - Your output should follow the following structure if there is no performance issue for a metric:
+      - The [metric] is consistently stable [with minimal fluctuations/without fluctuations].
+    - Your output should follow the following structure if there is performance issue for a metric:
+      - The [performance issue description], indicating performance issue.
+    ###Input: Throughput metric graph
 - id: graph_comparison_of_tests
   name: Graph comparison of tests
   type: default
